Introduction of new scanner timeout variable in local backend.

--- a/mopidy/backends/local/ext.conf
+++ b/mopidy/backends/local/ext.conf
@@ -1,5 +1,6 @@
 [local]
 enabled = true
+scan_timeout = 1000
 media_dir = $XDG_MUSIC_DIR
 playlists_dir = $XDG_DATA_DIR/mopidy/local/playlists
 tag_cache_file = $XDG_DATA_DIR/mopidy/local/tag_cache
